--- a/netift.toml
+++ b/netift.toml
@@ -2,3 +2,21 @@
 from = '/*'
 to = "/index.html"
 status = 200
+
+[[redirects]]
+from = "/all-jobs"
+to = "/index.html/all-jobs"
+status = 200
+force = true
+
+[[redirects]]
+from = "/add-job"
+to = "/index.html/add-job"
+status = 200
+force = true
+
+[[redirects]]
+from = "/profile"
+to = "/index.html/profile"
+status = 200
+force = true
